# Markitdown-for-Everyone

./: .gitignore  LICENSE  README.md  markitdown_for_everyone.py  pollinations_gui.py  pyproject.toml  requirements.txt
src/markitdown_pollinations/: __init__.py  cli.py  config.py  constants.py  converter.py  gui.py  i18n.py  pollinations_client.py  validation.py
tests/: conftest.py  test_cli.py  test_config.py  test_converter.py  test_pollinations_client.py  test_validation.py
