[project]
name = "markitdown-for-everyone"
version = "0.3.0"
description = "Command-line interface for converting files to Markdown using Pollinations API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markitdown[all]>=0.1.6,<1.0",
    "markitdown-ocr>=0.1.0,<1.0",
    "openai>=2.0.0,<3.0",
    "platformdirs>=4.0.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
markitdown-for-everyone = "markitdown_pollinations.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.format]